# STM-base

./: .gitmodules  CMakeLists.txt  README.md  arm-gcc-toolchain.cmake
.devcontainer/: devcontainer.json
src/: main.c
